--- a/autochannel-ui/autochannel/templates/pages/guild-categories.html
+++ b/autochannel-ui/autochannel/templates/pages/guild-categories.html
@@ -1,21 +1,26 @@
 {% extends "layouts/base.html" %}
 
+
 {% block title %}
-Categories for INSERT GUILD ID {{session['user']['username'] }}
+{% for g_info in guild %}
+Categories for {{g_info['name']}}: {{session['user']['username'] }}
+{% endfor %}
 {% endblock %}
 
 {% block app_content %}
+{% for g_info in guild %}
 <div class="container-fluid">
         <div class="row">
-            <h1>
-                Guild Categories
-            </h1>  
+            <h2>
+                Channel Categories for {{guild[g_info]['name']}} <img
+                src="{{guild[g_info]['icon']}}" width="64px" class="img-circle" />
+            </h2>  
         </div>
         <div>
             <table class="table">
                 <thead>
                     <tr>
-                        <th scope="col">ID</th>
+                        <!-- <th scope="col">ID</th> -->
                         <th scope="col">Name</th>
                         <th scope="col">Enabled</th>
                         <th scope="col">Prefix</th>
@@ -24,7 +29,7 @@ Categories for INSERT GUILD ID {{session['user']['username'] }}
                 <tbody>
                 {% for cat in categories %}
                     <tr>
-                        <th scope="row">{{cat}}</th>
+                        <!-- <th scope="row">{{cat}}</th> -->
                         <td>{{categories[cat]['name']}}</td>
                         <td><input type="checkbox" class='toggle' checked data-toggle="toggle"></td>
                         <td>AC!</td>
@@ -34,6 +39,7 @@ Categories for INSERT GUILD ID {{session['user']['username'] }}
               </table>
         </div>
     </div>
+{% endfor %}
 {% endblock %}
 
 {% block scripts %}
