--- a/autochannel-ui/autochannel/templates/pages/guild-categories.html
+++ b/autochannel-ui/autochannel/templates/pages/guild-categories.html
@@ -17,7 +17,7 @@ Categories for {{g_info['name']}}: {{session['user']['username'] }}
             </h2>  
         </div>
         <div>
-            <table class="table">
+            <table class="table discord-dark-col">
                 <thead>
                     <tr>
                         <!-- <th scope="col">ID</th> -->
